build minimal user interface and UI logic to test key. showing error in console log.

--- a/src/index.html
+++ b/src/index.html
@@ -10,3 +10,17 @@
   <script type="text/javascript" src="bundle.js"></script>
   <title>Currency Exchanger</title>
 </head>
+<body>
+  <div class="container">
+    <h1>US Currency Exchange</h1>
+    <h3>Please enter a cash value.</h3>
+    <form id="exchange">
+      <label for="usd">Dollar Amount:</label>
+      <input id="usdInput" class="form-control" type="number" required>
+      <button type="submit" class="btn btn-dark">Get Exchange</button>
+    </form>
+
+    <p id="exchanged"></p>
+  </label>
+</body>
+</html>
