fail API test, write error to the DOM with broken API key.

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <h1>US Currency Exchange</h1>
     <h3>Please enter a cash value.</h3>
     <form id="exchange">
-      <label for="usd">Dollar Amount:</label>
+      <label for="usdInput">Dollar Amount:</label>
       <input id="usdInput" class="form-control" type="number" required>
       <button type="submit" class="btn btn-dark">Get Exchange</button>
     </form>
