add conversion and readout functionality for all countries included in the JSON.

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
       <input id="usdInput" class="form-control" type="number" required>
       <button type="submit" class="btn btn-dark">Get Exchange</button>
     </form>
-
-    <p id="exchanged"></p>
   </label>
+  <div id="exchanged"></div>
+  </div>
 </body>
 </html>
