build object constructor for conversions by choice.

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <h3>Please enter a cash value.</h3>
     <form id="exchange">
       <label for="usdInput">Dollar Amount:</label>
-      <input id="usdInput" class="form-control" type="number" required>
+      <input id="usdInput" class="form-control" type="number" min=".01" step="any" required>
       <button type="submit" class="btn btn-dark">Get Exchange</button>
     </form>
   </label>
