--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,78 @@
     <form id="exchange">
       <label for="usdInput">Dollar Amount:</label>
       <input id="usdInput" class="form-control" type="number" min=".01" step="any" required>
+      <label for="inputCur">Choose Country: </label>
+      <input list="currency" name="currency" type="text" id="inputCur" required>
+      <datalist id="currency">
+        <option value="United Arab Emirates"></option>
+        <option value="Argentina"></option>
+        <option value="Australia"></option>
+        <option value="Bulgaria"></option>
+        <option value="Brazil"></option>
+        <option value="Bahamas"></option>
+        <option value="Canada"></option>
+        <option value="Switzerland"></option>
+        <option value="Chile"></option>
+        <option value="China"></option>
+        <option value="Colombia"></option>
+        <option value="Czech Republic"></option>
+        <option value="Denmark"></option>
+        <option value="Dominican Republic"></option>
+        <option value="Egypt"></option>
+        <option value="Germany"></option>
+        <option value="Austria"></option>
+        <option value="Belgium"></option>
+        <option value="Cyprus"></option>
+        <option value="Estonia"></option>
+        <option value="Finland"></option>
+        <option value="France"></option>
+        <option value="Greece"></option>
+        <option value="Ireland"></option>
+        <option value="Italy"></option>
+        <option value="Latvia"></option>
+        <option value="Lithuania"></option>
+        <option value="Luxembourg"></option>
+        <option value="Malta"></option>
+        <option value="Netherlands"></option>
+        <option value="Portugal"></option>
+        <option value="Slovakia"></option>
+        <option value="Slovenia"></option>
+        <option value="Spain"></option>
+        <option value="Fiji"></option>
+        <option value="United Kingdom"></option>
+        <option value="Guatemala"></option>
+        <option value="Hong Kong"></option>
+        <option value="Croatia"></option>
+        <option value="Hungary"></option>
+        <option value="Indonesia"></option>
+        <option value="Israel"></option>
+        <option value="India"></option>
+        <option value="Iceland"></option>
+        <option value="Japan"></option>
+        <option value="South Korea"></option>
+        <option value="Kazakhstan"></option>
+        <option value="Mexico"></option>
+        <option value="Malaysia"></option>
+        <option value="Norway"></option>
+        <option value="New Zealand"></option>
+        <option value="Panama"></option>
+        <option value="Sol	Peru"></option>
+        <option value="Philippines"></option>
+        <option value="Pakistan"></option>
+        <option value="h Zloty	Poland"></option>
+        <option value="Paraguay"></option>
+        <option value="Romania"></option>
+        <option value="Russia"></option>
+        <option value="Saudi Arabia"></option>
+        <option value="Sweden"></option>
+        <option value="Singapore"></option>
+        <option value="Thailand"></option>
+        <option value="Turkey"></option>
+        <option value="Taiwan"></option>
+        <option value="Ukraine"></option>
+        <option value="Uruguay"></option>
+        <option value="South Africa"></option>
+      </datalist>
       <button type="submit" class="btn btn-dark">Get Exchange</button>
     </form>
   </label>
