establish currency exchange for all countries with dropdown menu.

--- a/src/index.html
+++ b/src/index.html
@@ -17,77 +17,78 @@
     <form id="exchange">
       <label for="usdInput">Dollar Amount:</label>
       <input id="usdInput" class="form-control" type="number" min=".01" step="any" required>
-      <label for="inputCur">Choose Country: </label>
+      <label for="inputCur">Choose Country:</label>
       <input list="currency" name="currency" type="text" id="inputCur" required>
       <datalist id="currency">
-        <option value="United Arab Emirates"></option>
-        <option value="Argentina"></option>
-        <option value="Australia"></option>
-        <option value="Bulgaria"></option>
-        <option value="Brazil"></option>
-        <option value="Bahamas"></option>
-        <option value="Canada"></option>
-        <option value="Switzerland"></option>
-        <option value="Chile"></option>
-        <option value="China"></option>
-        <option value="Colombia"></option>
-        <option value="Czech Republic"></option>
-        <option value="Denmark"></option>
-        <option value="Dominican Republic"></option>
-        <option value="Egypt"></option>
-        <option value="Germany"></option>
-        <option value="Austria"></option>
-        <option value="Belgium"></option>
-        <option value="Cyprus"></option>
-        <option value="Estonia"></option>
-        <option value="Finland"></option>
-        <option value="France"></option>
-        <option value="Greece"></option>
-        <option value="Ireland"></option>
-        <option value="Italy"></option>
-        <option value="Latvia"></option>
-        <option value="Lithuania"></option>
-        <option value="Luxembourg"></option>
-        <option value="Malta"></option>
-        <option value="Netherlands"></option>
-        <option value="Portugal"></option>
-        <option value="Slovakia"></option>
-        <option value="Slovenia"></option>
-        <option value="Spain"></option>
-        <option value="Fiji"></option>
-        <option value="United Kingdom"></option>
-        <option value="Guatemala"></option>
-        <option value="Hong Kong"></option>
-        <option value="Croatia"></option>
-        <option value="Hungary"></option>
-        <option value="Indonesia"></option>
-        <option value="Israel"></option>
-        <option value="India"></option>
-        <option value="Iceland"></option>
-        <option value="Japan"></option>
-        <option value="South Korea"></option>
-        <option value="Kazakhstan"></option>
-        <option value="Mexico"></option>
-        <option value="Malaysia"></option>
-        <option value="Norway"></option>
-        <option value="New Zealand"></option>
-        <option value="Panama"></option>
-        <option value="Sol	Peru"></option>
-        <option value="Philippines"></option>
-        <option value="Pakistan"></option>
-        <option value="h Zloty	Poland"></option>
-        <option value="Paraguay"></option>
-        <option value="Romania"></option>
-        <option value="Russia"></option>
-        <option value="Saudi Arabia"></option>
-        <option value="Sweden"></option>
-        <option value="Singapore"></option>
-        <option value="Thailand"></option>
-        <option value="Turkey"></option>
-        <option value="Taiwan"></option>
-        <option value="Ukraine"></option>
-        <option value="Uruguay"></option>
-        <option value="South Africa"></option>
+        <option value="AED">United Arab Emirates</option>
+        <option value="ARS">Argentina</option>	
+        <option value="AUD">Australia</option>
+        <option value="BGN">Bulgaria</option>	
+        <option value="BRL">Brazil</option>	
+        <option value="BSD">Bahamas</option>	
+        <option value="CAD">Canada</option>
+        <option value="CHF">Switzerland</option>
+        <option value="CLP">Chile</option>
+        <option value="CNY">China</option>
+        <option value="COP">Colombia</option>
+        <option value="CZK">Czech Republic</option>
+        <option value="DKK">Denmark</option>
+        <option value="DOP">Dominican Republic</option>
+        <option value="EGP">Egypt</option>
+        <option value="EUR">Germany</option>
+        <option value="EUR">Austria</option>
+        <option value="EUR"><Belgium/option>
+        <option value="EUR">Cyprus</option>
+        <option value="EUR">Estonia</option>
+        <option value="EUR">Finland</option>
+        <option value="EUR">France</option>
+        <option value="EUR">Greece</option>
+        <option value="EUR">Ireland</option>
+        <option value="EUR">Italy</option>
+        <option value="EUR">Latvia</option>
+        <option value="EUR">Lithuania</option>
+        <option value="EUR">Luxembourg</option>
+        <option value="EUR">Malta</option>
+        <option value="EUR">Netherlands</option>
+        <option value="EUR">Portugal</option>
+        <option value="EUR">Slovakia</option>
+        <option value="EUR">Slovenia</option>
+        <option value="EUR">Spain</option>
+        <option value="FJD">Fiji</option>
+        <option value="GBP">United Kingdom</option>	
+        <option value="GTQ">Guatemala</option>
+        <option value="HKD">Hong Kong</option>
+        <option value="HRK">Croatia</option>
+        <option value="HUF">Hungary</option>
+        <option value="IDR">Indonesia</option>
+        <option value="ILS">Israel</option>
+        <option value="INR">India</option>
+        <option value="ISK">Iceland</option>
+        <option value="JPY">Japan</option>
+        <option value="KRW">South Korea</option>
+        <option value="KZT">Kazakhstan</option>
+        <option value="MXN">Mexico</option>
+        <option value="MYR">Malaysia</option>
+        <option value="NOK">Norway</option>
+        <option value="NZD">New Zealand</option>
+        <option value="PAB">Panama</option>
+        <option value="PEN">Peru</option>
+        <option value="PHP">Philippines</option>
+        <option value="PKR">Pakistan</option>
+        <option value="PLN">Poland</option>
+        <option value="PYG">Paraguay</option>
+        <option value="RON">Romania</option>	
+        <option value="RUB">Russia</option>	
+        <option value="SAR">Saudi Arabia</option>
+        <option value="SEK">Sweden</option>
+        <option value="SGD">Singapore</option>	
+        <option value="THB">Thailand</option>	
+        <option value="TRY">Turkey</option>
+        <option value="TWD">Taiwan</option>	
+        <option value="UAH">Ukraine</option>
+        <option value="USD">United States</option>
+        <option value="UYU">Uruguay</option>	
+        <option value="ZAR">South Africa</option>
       </datalist>
       <button type="submit" class="btn btn-dark">Get Exchange</button>
     </form>
